edited modal functionality

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
 		<title>NakiasMadEvents</title>
@@ -26,10 +25,11 @@
 			<input type="email" name="email" id="email" placeholder="Email Address" />
 			<input type="submit" value="Sign Up" />
 		</form>
-		<!-- Trigger Button -->
+
+		<!-- Trigger Button for Video Modal -->
 		<button id="video-modal-trigger">watch a cool video</button>
 
-		<!-- Modal Structure -->
+		<!-- Modal Structure (hidden by default) -->
 		<div id="video-modal" class="modal">
 			<span class="close">&times;</span>
 			<video controls>
